--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,8 @@
             and
             <a href="https://18f.gsa.gov">18F</a>.
           </p>
+          
+          <p><a href="https://github.com/eregs/eRegulations">Contribute to this documentation.</a></p>
 
           <p>Hosted on <a href="http://pages.github.com/">GitHub Pages</a>.</p>
         </div><!--/.wrap -->
