--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
             <a href="https://18f.gsa.gov">18F</a>.
           </p>
           
-          <p><a href="https://github.com/eregs/eRegulations">Contribute to this documentation.</a></p>
+          <p><a href="https://github.com/eregs/eregs.github.io">Contribute to this documentation.</a></p>
 
           <p>Hosted on <a href="http://pages.github.com/">GitHub Pages</a>.</p>
         </div><!--/.wrap -->
