--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,6 +94,10 @@ h4 {
     text-transform: uppercase;
 }
 
+h5 {
+    font-size: 1em;
+}
+
 .page-title {
     margin-top: .727272727em; /* 16/22 */
 }
