--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -578,3 +578,20 @@ Mobile Styles
     }
 
 }
+
+/* See
+ * https://www.h3xed.com/web-development/how-to-make-a-responsive-100-width-youtube-iframe-embed
+ **/
+.youtube-wrapper {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.youtube-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
